bug 307558, fix RDF serializer to check for existing namespace mappings before adding new ones, r=bsmedberg, sr=mrbkap